--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <section class = "container-fluid p-0 m-4">    
         <div class = "row">
-            <form class = "col-12 col-lg-3 mr-3 vh-100">
+            <form class = "col-12 col-lg-3 vh-100">
                 <h2 class="">Search for a city:</h2>
                 <input class="form-control form-control-lg" type="text" placeholder="Pittsburgh">
-                <button type="submit" class="btn btn-primary w-100 mt-2">Search</button>
+                <button type="submit" class="btn btn-primary w-100 mt-2" id = "fetch-button">Search</button>
     
             </form>
             <div class= "col 12 col-lg-8">
