--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <p id="currentDay" class="lead"></p>
     </header>
 
-    <section class = "container-fluid p-0 m-4">    
-        <div class = "row">
-            <form class = "col-12 col-lg-3 vh-100">
+    <section class = "container-fluid mt-4">    
+        <div class = "row col-12">
+            <form class = "col-3 vh-100">
                 <h2 class="">Search for a city:</h2>
                 <input class="form-control form-control-lg inputfield" type="text" placeholder="Pittsburgh">
                 <button type="submit" class="btn btn-primary w-100 mt-2 searchBtn" id = "fetch-button">Search</button>
     
             </form>
-            <div class= "col 12 col-lg-8">
+            <div class= "col-9">
                 <div class = "border border-dark p-2">
                     <h3 id = "cityNameDate"></h3>
                     <div>
