--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div class = "row col-12">
             <form class = "col-3 vh-100">
                 <h2 class="">Search for a city:</h2>
-                <input class="form-control form-control-lg inputfield" type="text" placeholder="Pittsburgh">
+                <input class="form-control form-control-lg" id = "inputfield" type="text" placeholder="Pittsburgh">
                 <button type="submit" class="btn btn-primary w-100 mt-2 searchBtn" id = "fetch-button">Search</button>
     
             </form>
             <div class= "col-9">
                 <div class = "border border-dark p-2">
-                    <h3 id = "cityNameDate"></h3>
+                    <h3 id = "cityName"></h3>
                     <div>
                         <ul>
                             <li id = "temp"></li>
