stuff working and cards displaying underneath main box when weather info is requested

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Weather Dashboard</title>
 </head>
 
-<body>
+<body class = "bg-secondary">
     
     <header class="header text-dark bg-info">
         <h1 class="display-3">Weather Dashboard</h1>
@@ -39,7 +39,8 @@
                 </div>
                 <div>
                     <!-- This div is where the cards holding the 5-day forecast will go -->
-                    <h3 class = "5-day-forecast pt-3">5-Day Forecast:</h3>
+                    <h3 class = "pt-3">5-Day Forecast:</h3>
+                    <div id = "forecast"></div>
 
                 </div>
             </div>
