--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
             </form>
             <div class= "col-9">
-                <div class = "border border-dark p-2">
+                <div class = "border border-dark bg-dark text-white p-2">
                     <h3 id = "cityName"></h3>
                     <div>
                         <ul>
