getting the buttons to display, though not properly.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <h2 class="">Search for a city:</h2>
                 <input class="form-control form-control-lg" id = "inputfield" type="text" placeholder="Pittsburgh">
                 <button type="submit" class="btn btn-primary w-100 mt-2 searchBtn" id = "fetch-button">Search</button>
+                <div id = "history"></div>
     
             </form>
             <div class= "col-9">
