got buttons displaying in better color, shape, and spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Weather Dashboard</title>
 </head>
 
-<body class = "bg-secondary">
+<body>
     
     <header class="header text-dark bg-info">
         <h1 class="display-3">Weather Dashboard</h1>
