did some work with the colors of the page background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Weather Dashboard</title>
 </head>
 
-<body>
+<body class = "pageBackground">
     
     <header class="header text-dark bg-info">
         <h1 class="display-3">Weather Dashboard</h1>
